--- a/bin/install
+++ b/bin/install
@@ -22,6 +22,11 @@ echo 'Installing mariadb'
 # Must be invoked with absolute path to avoid a mariadb bug involving my_print_defaults
 /usr/bin/mysql_install_db --datadir=$OPENSHIFT_MARIADB_DIR/data || error 'Failed to create mariadb', 119
 
+export LD_LIBRARY_PATH="${OPENSHIFT_MARIADB_DIR}/michael44/scaledb-latest-mariadb-5.5.34/lib"
+${OPENSHIFT_MARIADB_DIR}/michael44/mariadb-5.5.34-linux-x86_64/scripts/mysql_install_db   --basedir=${OPENSHIFT_MARIADB_DIR}/michael44/mariadb-5.5.34-linux-x86_64   --defaults-file=${OPENSHIFT_MARIADB_DIR}/bin/config.cnf  > t.txt
+
+
+
 client_result ""
 client_result "MySQL 5.1 database added.  Please make note of these credentials:"
 client_result ""
