--- a/bin/install
+++ b/bin/install
@@ -26,7 +26,10 @@ export LD_LIBRARY_PATH="${OPENSHIFT_MARIADB_DIR}/michael44/scaledb-latest-mariad
 
 
 sed -e "s|OPENSHIFT_MARIADB_DIR|${OPENSHIFT_MARIADB_DIR}|" ${OPENSHIFT_MARIADB_DIR}/bin/config.cnf.tmp > ${OPENSHIFT_MARIADB_DIR}/bin/config.cnf
-sed -e "s|OPENSHIFT_MARIADB_DIR|${OPENSHIFT_MARIADB_DIR}|" ${OPENSHIFT_MARIADB_DIR}/bin/cas.cnf.tmp > ${OPENSHIFT_MARIADB_DIR}/bin/cas.cnf
+sed -e "s|OPENSHIFT_MARIADB_DIR|${OPENSHIFT_MARIADB_DIR}|" ${OPENSHIFT_MARIADB_DIR}/bin/cas.cnf.tmp > ${OPENSHIFT_MARIADB_DIR}/bin/cas.cnf.tmp2
+sed -e "s|OPENSHIFT_MARIADB_DB_HOST|${OPENSHIFT_MARIADB_DB_HOST}|" ${OPENSHIFT_MARIADB_DIR}/bin/cas.cnf.tmp2 > ${OPENSHIFT_MARIADB_DIR}/bin/cas.cnf
+
+
 sed -e "s|OPENSHIFT_MARIADB_DB_HOST|${OPENSHIFT_MARIADB_DB_HOST}|" ${OPENSHIFT_MARIADB_DIR}/bin/slm.cnf.tmp > ${OPENSHIFT_MARIADB_DIR}/bin/slm.cnf
 
 ${OPENSHIFT_MARIADB_DIR}/michael44/mariadb-5.5.34-linux-x86_64/scripts/mysql_install_db   --basedir=${OPENSHIFT_MARIADB_DIR}/michael44/mariadb-5.5.34-linux-x86_64   --defaults-file=${OPENSHIFT_MARIADB_DIR}/bin/config.cnf  > t.txt
