--- a/bin/install
+++ b/bin/install
@@ -5,8 +5,8 @@ source $OPENSHIFT_CARTRIDGE_SDK_BASH
 # Generate username, password, and db name and create env variables
 echo 'Generating username and password'
 
-username=$(generate_username)
-password=$(generate_password)
+username="root"
+password=""
 
 echo "$username" > $OPENSHIFT_MARIADB_DIR/env/OPENSHIFT_MARIADB_DB_USERNAME
 echo "$password" > $OPENSHIFT_MARIADB_DIR/env/OPENSHIFT_MARIADB_DB_PASSWORD
