--- a/bin/install
+++ b/bin/install
@@ -32,7 +32,8 @@ sed -e "s|OPENSHIFT_MARIADB_DB_HOST|${OPENSHIFT_MARIADB_DB_HOST}|" ${OPENSHIFT_M
 
 
 sed -e "s|OPENSHIFT_MARIADB_DB_HOST|${OPENSHIFT_MARIADB_DB_HOST}|" ${OPENSHIFT_MARIADB_DIR}/bin/slm.cnf.tmp > ${OPENSHIFT_MARIADB_DIR}/bin/slm.cnf
-sed -e "s|OPENSHIFT_MARIADB_DB_HOST|${OPENSHIFT_MARIADB_DB_HOST}|" ${OPENSHIFT_MARIADB_DIR}/bin/config.cnf.tmp2 > ${OPENSHIFT_MARIADB_DIR}/bin/config.cnf
+sed -e "s|OPENSHIFT_MARIADB_DB_HOST|${OPENSHIFT_MARIADB_DB_HOST}|" ${OPENSHIFT_MARIADB_DIR}/bin/config.cnf.tmp2 > ${OPENSHIFT_MARIADB_DIR}/bin/config.cnf.tmp3
+sed -e "s|OPENSHIFT_MARIADB_DB_PORT|${OPENSHIFT_MARIADB_DB_PORT}|" ${OPENSHIFT_MARIADB_DIR}/bin/config.cnf.tmp3 > ${OPENSHIFT_MARIADB_DIR}/bin/config.cnf
 
 
 cp ${OPENSHIFT_MARIADB_DIR}/bin/scaledb.cnf ${OPENSHIFT_MARIADB_DIR}/michael44/mariadb-5.5.34-linux-x86_64/data/
