--- a/bin/install
+++ b/bin/install
@@ -27,11 +27,15 @@ export LD_LIBRARY_PATH="${OPENSHIFT_MARIADB_DIR}/michael44/scaledb-latest-mariad
 
 sed -e "s|OPENSHIFT_MARIADB_DIR|${OPENSHIFT_MARIADB_DIR}|" ${OPENSHIFT_MARIADB_DIR}/bin/config.cnf.tmp > ${OPENSHIFT_MARIADB_DIR}/bin/config.cnf.tmp2
 sed -e "s|OPENSHIFT_MARIADB_DIR|${OPENSHIFT_MARIADB_DIR}|" ${OPENSHIFT_MARIADB_DIR}/bin/cas.cnf.tmp > ${OPENSHIFT_MARIADB_DIR}/bin/cas.cnf.tmp2
-sed -e "s|OPENSHIFT_MARIADB_DB_HOST|${OPENSHIFT_MARIADB_DB_HOST}|" ${OPENSHIFT_MARIADB_DIR}/bin/cas.cnf.tmp2 > ${OPENSHIFT_MARIADB_DIR}/bin/cas.cnf
+sed -e "s|OPENSHIFT_MARIADB_DB_HOST|${OPENSHIFT_GEAR_DNS}|" ${OPENSHIFT_MARIADB_DIR}/bin/cas.cnf.tmp2 > ${OPENSHIFT_MARIADB_DIR}/bin/cas.cnf.tmp3
+sed -e "s|OPENSHIFT_CAS_PORT|${OPENSHIFT_MARIADB_CAS_PROXY}|" ${OPENSHIFT_MARIADB_DIR}/bin/cas.cnf.tmp3 > ${OPENSHIFT_MARIADB_DIR}/bin/cas.cnf
+
 sed -e "s|OPENSHIFT_MARIADB_DB_HOST|${OPENSHIFT_MARIADB_DB_HOST}|" ${OPENSHIFT_MARIADB_DIR}/bin/scaledb.cnf.tmp > ${OPENSHIFT_MARIADB_DIR}/bin/scaledb.cnf
 
 
-sed -e "s|OPENSHIFT_MARIADB_DB_HOST|${OPENSHIFT_MARIADB_DB_HOST}|" ${OPENSHIFT_MARIADB_DIR}/bin/slm.cnf.tmp > ${OPENSHIFT_MARIADB_DIR}/bin/slm.cnf
+sed -e "s|OPENSHIFT_MARIADB_DB_HOST|${OPENSHIFT_GEAR_DNS}|" ${OPENSHIFT_MARIADB_DIR}/bin/slm.cnf.tmp > ${OPENSHIFT_MARIADB_DIR}/bin/slm.cnf.tmp2
+sed -e "s|OPENSHIFT_CAS_PORT|${OPENSHIFT_MARIADB_CAS_PROXY}|" ${OPENSHIFT_MARIADB_DIR}/bin/slm.cnf.tmp2 > ${OPENSHIFT_MARIADB_DIR}/bin/slm.cnf
+
 sed -e "s|OPENSHIFT_MARIADB_DB_HOST|${OPENSHIFT_MARIADB_DB_HOST}|" ${OPENSHIFT_MARIADB_DIR}/bin/config.cnf.tmp2 > ${OPENSHIFT_MARIADB_DIR}/bin/config.cnf.tmp3
 sed -e "s|OPENSHIFT_MARIADB_DB_PORT|${OPENSHIFT_MARIADB_DB_PORT}|" ${OPENSHIFT_MARIADB_DIR}/bin/config.cnf.tmp3 > ${OPENSHIFT_MARIADB_DIR}/bin/config.cnf
 
