--- a/bin/install
+++ b/bin/install
@@ -30,7 +30,9 @@ sed -e "s|OPENSHIFT_MARIADB_DIR|${OPENSHIFT_MARIADB_DIR}|" ${OPENSHIFT_MARIADB_D
 sed -e "s|OPENSHIFT_MARIADB_DB_HOST|${OPENSHIFT_GEAR_DNS}|" ${OPENSHIFT_MARIADB_DIR}/bin/cas.cnf.tmp2 > ${OPENSHIFT_MARIADB_DIR}/bin/cas.cnf.tmp3
 sed -e "s|OPENSHIFT_CAS_PORT|${OPENSHIFT_MARIADB_CAS_PROXY}|" ${OPENSHIFT_MARIADB_DIR}/bin/cas.cnf.tmp3 > ${OPENSHIFT_MARIADB_DIR}/bin/cas.cnf
 
-sed -e "s|OPENSHIFT_MARIADB_DB_HOST|${OPENSHIFT_MARIADB_DB_HOST}|" ${OPENSHIFT_MARIADB_DIR}/bin/scaledb.cnf.tmp > ${OPENSHIFT_MARIADB_DIR}/bin/scaledb.cnf
+sed -e "s|OPENSHIFT_MARIADB_DB_HOST|${OPENSHIFT_GEAR_DNS}|" ${OPENSHIFT_MARIADB_DIR}/bin/scaledb.cnf.tmp > ${OPENSHIFT_MARIADB_DIR}/bin/scaledb.cnf.tmp2
+sed -e "s|OPENSHIFT_CAS_PORT|${OPENSHIFT_MARIADB_CAS_PROXY}|" ${OPENSHIFT_MARIADB_DIR}/bin/scaledb.cnf.tmp2 > ${OPENSHIFT_MARIADB_DIR}/bin/scaledb.cnf
+
 
 
 sed -e "s|OPENSHIFT_MARIADB_DB_HOST|${OPENSHIFT_GEAR_DNS}|" ${OPENSHIFT_MARIADB_DIR}/bin/slm.cnf.tmp > ${OPENSHIFT_MARIADB_DIR}/bin/slm.cnf.tmp2
