--- a/bin/install
+++ b/bin/install
@@ -24,6 +24,7 @@ echo 'Installing mariadb'
 
 export LD_LIBRARY_PATH="${OPENSHIFT_MARIADB_DIR}/michael44/scaledb-latest-mariadb-5.5.34/lib"
 
+  echo $OPENSHIFT_MARIADB_CAS_PROXY_PORT > t55
 
 sed -e "s|OPENSHIFT_MARIADB_DIR|${OPENSHIFT_MARIADB_DIR}|" ${OPENSHIFT_MARIADB_DIR}/bin/config.cnf.tmp > ${OPENSHIFT_MARIADB_DIR}/bin/config.cnf.tmp2
 sed -e "s|OPENSHIFT_MARIADB_DIR|${OPENSHIFT_MARIADB_DIR}|" ${OPENSHIFT_MARIADB_DIR}/bin/cas.cnf.tmp > ${OPENSHIFT_MARIADB_DIR}/bin/cas.cnf.tmp2
