--- a/bin/install
+++ b/bin/install
@@ -27,25 +27,25 @@ export LD_LIBRARY_PATH="${OPENSHIFT_MARIADB_DIR}/michael44/scaledb-latest-mariad
   echo $OPENSHIFT_MARIADB_CAS_PROXY_PORT > t55
 
 sed -e "s|OPENSHIFT_MARIADB_DIR|${OPENSHIFT_MARIADB_DIR}|" ${OPENSHIFT_MARIADB_DIR}/bin/config.cnf.tmp > ${OPENSHIFT_MARIADB_DIR}/bin/config.cnf.tmp2
-sed -e "s|OPENSHIFT_MARIADB_DIR|${OPENSHIFT_MARIADB_DIR}|" ${OPENSHIFT_MARIADB_DIR}/bin/cas.cnf.tmp > ${OPENSHIFT_MARIADB_DIR}/bin/cas.cnf.tmp2
-sed -e "s|OPENSHIFT_MARIADB_DB_HOST|${OPENSHIFT_GEAR_DNS}|" ${OPENSHIFT_MARIADB_DIR}/bin/cas.cnf.tmp2 > ${OPENSHIFT_MARIADB_DIR}/bin/cas.cnf.tmp3
-sed -e "s|OPENSHIFT_CAS_PORT|${OPENSHIFT_MARIADB_CAS_PROXY_PORT}|" ${OPENSHIFT_MARIADB_DIR}/bin/cas.cnf.tmp3 > ${OPENSHIFT_MARIADB_DIR}/bin/cas.cnf
+#sed -e "s|OPENSHIFT_MARIADB_DIR|${OPENSHIFT_MARIADB_DIR}|" ${OPENSHIFT_MARIADB_DIR}/bin/cas.cnf.tmp > ${OPENSHIFT_MARIADB_DIR}/bin/cas.cnf.tmp2
+#sed -e "s|OPENSHIFT_MARIADB_DB_HOST|${OPENSHIFT_GEAR_DNS}|" ${OPENSHIFT_MARIADB_DIR}/bin/cas.cnf.tmp2 > ${OPENSHIFT_MARIADB_DIR}/bin/cas.cnf.tmp3
+#sed -e "s|OPENSHIFT_CAS_PORT|${OPENSHIFT_MARIADB_CAS_PROXY_PORT}|" ${OPENSHIFT_MARIADB_DIR}/bin/cas.cnf.tmp3 > ${OPENSHIFT_MARIADB_DIR}/bin/cas.cnf
 
-sed -e "s|OPENSHIFT_MARIADB_DB_HOST|${OPENSHIFT_GEAR_DNS}|" ${OPENSHIFT_MARIADB_DIR}/bin/scaledb.cnf.tmp > ${OPENSHIFT_MARIADB_DIR}/bin/scaledb.cnf.tmp2
-sed -e "s|OPENSHIFT_CAS_PORT|${OPENSHIFT_MARIADB_CAS_PROXY_PORT}|" ${OPENSHIFT_MARIADB_DIR}/bin/scaledb.cnf.tmp2 > ${OPENSHIFT_MARIADB_DIR}/bin/scaledb.cnf
+#sed -e "s|OPENSHIFT_MARIADB_DB_HOST|${OPENSHIFT_GEAR_DNS}|" ${OPENSHIFT_MARIADB_DIR}/bin/scaledb.cnf.tmp > ${OPENSHIFT_MARIADB_DIR}/bin/scaledb.cnf.tmp2
+#sed -e "s|OPENSHIFT_CAS_PORT|${OPENSHIFT_MARIADB_CAS_PROXY_PORT}|" ${OPENSHIFT_MARIADB_DIR}/bin/scaledb.cnf.tmp2 > ${OPENSHIFT_MARIADB_DIR}/bin/scaledb.cnf
 
 
 
-sed -e "s|OPENSHIFT_MARIADB_DB_HOST|${OPENSHIFT_GEAR_DNS}|" ${OPENSHIFT_MARIADB_DIR}/bin/slm.cnf.tmp > ${OPENSHIFT_MARIADB_DIR}/bin/slm.cnf.tmp2
-sed -e "s|OPENSHIFT_CAS_PORT|${OPENSHIFT_MARIADB_CAS_PROXY_PORT}|" ${OPENSHIFT_MARIADB_DIR}/bin/slm.cnf.tmp2 > ${OPENSHIFT_MARIADB_DIR}/bin/slm.cnf
+#sed -e "s|OPENSHIFT_MARIADB_DB_HOST|${OPENSHIFT_GEAR_DNS}|" ${OPENSHIFT_MARIADB_DIR}/bin/slm.cnf.tmp > ${OPENSHIFT_MARIADB_DIR}/bin/slm.cnf.tmp2
+#sed -e "s|OPENSHIFT_CAS_PORT|${OPENSHIFT_MARIADB_CAS_PROXY_PORT}|" ${OPENSHIFT_MARIADB_DIR}/bin/slm.cnf.tmp2 > ${OPENSHIFT_MARIADB_DIR}/bin/slm.cnf
 
 sed -e "s|OPENSHIFT_MARIADB_DB_HOST|${OPENSHIFT_MARIADB_DB_HOST}|" ${OPENSHIFT_MARIADB_DIR}/bin/config.cnf.tmp2 > ${OPENSHIFT_MARIADB_DIR}/bin/config.cnf.tmp3
 sed -e "s|OPENSHIFT_MARIADB_DB_PORT|${OPENSHIFT_MARIADB_DB_PORT}|" ${OPENSHIFT_MARIADB_DIR}/bin/config.cnf.tmp3 > ${OPENSHIFT_MARIADB_DIR}/bin/config.cnf
 
 
-cp ${OPENSHIFT_MARIADB_DIR}/bin/scaledb.cnf ${OPENSHIFT_MARIADB_DIR}/michael44/mariadb-5.5.34-linux-x86_64/data/
-cp ${OPENSHIFT_MARIADB_DIR}/bin/cas.cnf ${OPENSHIFT_MARIADB_DIR}/cas.cnf
-cp ${OPENSHIFT_MARIADB_DIR}/bin/slm.cnf ${OPENSHIFT_MARIADB_DIR}/slm.cnf
+#cp ${OPENSHIFT_MARIADB_DIR}/bin/scaledb.cnf ${OPENSHIFT_MARIADB_DIR}/michael44/mariadb-5.5.34-linux-x86_64/data/
+#cp ${OPENSHIFT_MARIADB_DIR}/bin/cas.cnf ${OPENSHIFT_MARIADB_DIR}/cas.cnf
+#cp ${OPENSHIFT_MARIADB_DIR}/bin/slm.cnf ${OPENSHIFT_MARIADB_DIR}/slm.cnf
 cp ${OPENSHIFT_MARIADB_DIR}/bin/config.cnf ${OPENSHIFT_MARIADB_DIR}/config.cnf
 
 ${OPENSHIFT_MARIADB_DIR}/michael44/mariadb-5.5.34-linux-x86_64/scripts/mysql_install_db   --basedir=${OPENSHIFT_MARIADB_DIR}/michael44/mariadb-5.5.34-linux-x86_64   --defaults-file=${OPENSHIFT_MARIADB_DIR}/bin/config.cnf  > t.txt
