--- a/bin/install
+++ b/bin/install
@@ -53,17 +53,12 @@ cp ${OPENSHIFT_MARIADB_DIR}/bin/config.cnf ${OPENSHIFT_MARIADB_DIR}/config.cnf
 
 
 client_result ""
-client_result "MySQL 5.1 database added.  Please make note of these credentials:"
+client_result "SCALEDB STORAGE NODE  (CAS) added.  Please make note of the connect info:"
 client_result ""
-client_result "       Root User: $username"
-client_result "   Root Password: $password"
-client_result "   Database Name: $OPENSHIFT_APP_NAME"
+client_result "       CAS HOST     : $OPENSHIFT_GEAR_DNS"
+client_result "   CAS PORT (public): $OPENSHIFT_MARIADB_CAS_PROXY_PORT"
+client_result "   Note* won't start untill SLM Joins"
 client_result ""
-
-client_result "Connection URL: mysql://$OPENSHIFT_MARIADB_DB_HOST:$OPENSHIFT_MARIADB_DB_PORT/"
-client_result ""
-client_result "You can manage your new MySQL database by also embedding phpmyadmin."
-client_result "The phpmyadmin username and password will be the same as the MySQL credentials above."
 
 cart_props 'connection_url=mysql://$OPENSHIFT_MARIADB_DB_HOST:$OPENSHIFT_MARIADB_DB_PORT/'
 cart_props "username=$username"
